@@ -2,6 +2,9 @@
 Change log for mod_reader
 ========================================
 
+2025-06-29 (52)
+ - replace strftime with core_text::strftime for compatability with PHP 8.1 and later
+
 2025-04-03 (51)
  - fix error trying to set field to NOTNULL when NULL values already exist in some table records.
 
